调整设计，搜索框太大，使编辑器顶到顶部。

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ApeNote4</title>
+    <title>小猿笔记</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="shortcut icon" href="{{rootURL}}assets/images/logo/logo.png" />
 
     {{content-for "head"}}
 
@@ -82,7 +84,7 @@
             }
         },
         "toolbarConfig": {
-            "pin": true,
+            "pin": false,
             "hide": false  //隐藏工具栏
         },
         "counter": {
